manifests/services/namespaces/matrix/04-admin-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-admin-ingress
  namespace: matrix
  labels:
    environment: matrix
    app.kubernetes.io/instance: matrix
    app: matrix
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
    hajimari.io/enable: "true"
    hajimari.io/icon: "security"
  # annotations:
  #   nginx.ingress.kubernetes.io/proxy-body-size: 400m
spec:
  tls:
    - hosts:
        - matrix-admin.domain.tld
  rules:
    - host: matrix-admin.domain.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: synapse-admin-service
                port:
                  number: 8013
